@@ -19,7 +19,6 @@ package cd.go.contrib.secrets.kubernetes.models;
 import cd.go.plugin.base.annotations.Property;
 import com.google.gson.annotations.Expose;
 import com.google.gson.annotations.SerializedName;
-import org.apache.commons.lang3.StringUtils;
 
 import java.util.Objects;
 
@@ -66,7 +65,7 @@ public class SecretConfig {
     }
 
     public String getNamespace() {
-        return StringUtils.isBlank(namespace) ? "default" : namespace;
+        return namespace == null || namespace.isBlank() ? "default" : namespace;
     }
 
     public void setSecretName(String secretName) {
